--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,4 +34,14 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
-      
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2.2.4
+      with:
+        # Artifact name
+        name: Test_lib # optional, default is artifact
+        # A file, directory or wildcard pattern that describes what to upload
+        path: |
+          ${{github.workspace}}/build/libyafaray4.so
+          ${{github.workspace}}/build/yafaray4_*
+        
