--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,13 +15,36 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+    name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
     strategy:
       matrix:
         config:
-          - os: ubuntu-latest
-          - os: macos-latest
-          - os: windows-latest
+        - {
+            name: "Test Windows",
+            os: windows-latest,
+            artifact: "test_windows.zip"
+          }
+        - {
+            name: "Test Ubuntu 16.04 LTS",
+            os: ubuntu-16.04,
+            artifact: "test_ubuntu_16_04.zip"
+          }
+        - {
+            name: "Test Ubuntu 18.04 LTS",
+            os: ubuntu-18.04,
+            artifact: "test_ubuntu_18_04.zip"
+          }
+        - {
+            name: "Test Ubuntu 20.04 LTS",
+            os: ubuntu-20.04,
+            artifact: "test_ubuntu_20_04.zip"
+          }
+        - {
+            name: "Test macOS",
+            os: macos-latest,
+            artifact: "test_mac.zip"
+          }
 
     steps:
     - uses: actions/checkout@v2
@@ -45,7 +68,7 @@ jobs:
       uses: actions/upload-artifact@v2.2.4
       with:
         # Artifact name
-        name: Test_lib # optional, default is artifact
+        name: ${{ matrix.config.artifact }} # optional, default is artifact
         # A file, directory or wildcard pattern that describes what to upload
         path: |
           ${{github.workspace}}/build/src/libyafaray*.*
