--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -87,7 +87,6 @@ jobs:
       with:
         # Artifact name
         name: ${{ matrix.config.artifact }} # optional, default is artifact
-        working-directory: ${{github.workspace}}/install
         # A file, directory or wildcard pattern that describes what to upload
         path: |
-          ./*
+          ${{github.workspace}}/install/*
