--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Install dependencies on Windows MSVC
       if: startsWith(matrix.config.name, 'Test Windows MSVC')
       run: |
-        - run: choco install opencv
+        choco install opencv
     
     - name: Install dependencies on Ubuntu 18.04 LTS
       if: startsWith(matrix.config.os, 'ubuntu-18.04')
